fix: modal scrollbar blink

--- a/app/containers/appContainer/scrollbar.scss
+++ b/app/containers/appContainer/scrollbar.scss
@@ -1,4 +1,4 @@
-*:not(:hover)::-webkit-scrollbar {
+*:not(.modal):not(:hover)::-webkit-scrollbar {
   display: none;
 }
   
